--- a/css/main.css
+++ b/css/main.css
@@ -476,7 +476,7 @@
 
 
 .skill.des .progress .percentage {
-	background-color: #efefef;
+	background-color: #829BA0;
 }
 
 
@@ -524,7 +524,7 @@
 
 
 .skill .title.des{
-	border: 1px dashed #efefef;
+	border: 1px dashed #829BA0;
 }
 
 .skill .title.dev{
@@ -1541,6 +1541,7 @@ span.meta-date{
 	.block-quote blockquote{padding-right:0;}
 	
 }
+
 
 /* -------------------- End media queries -------------------- */
 
